--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="stylesheet"
       id="main-css"
-      href="./Sin21 Designs __files/style.css"
+      href="css/style.css"
       type="text/css"
       media="all"
     />
