--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
 
     <title>Мое резюме</title>
 
-    <link
-      rel="stylesheet"
-      id="main-css"
-      href="css/style.css"
-      type="text/css"
-      media="all"
-    />
+    <link rel="stylesheet" id="main-css" href="/css/style.css" type="text/css" media="all" />
     <link
       rel="stylesheet"
       id="font-awesome-css"
