--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html lang="ru-BE">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
 
     <title>Мое резюме</title>
 
     <link rel="stylesheet" id="main-css" href="/css/style.css" type="text/css" media="all" />
-    <link
-      rel="stylesheet"
-      id="font-awesome-css"
-      href="./Sin21 Designs __files/font-awesome.min.css"
-      type="text/css"
-      media="all"
-    />
+    <link rel="stylesheet" id="font-awesome-css"  href=".//font-awesome.min.css"  type="text/css" media="all" />
   </head>
   <body>
     <div class="first-area">
