--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru-BE">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/img/icon.png" />
 
     <title>Мое резюме</title>
 
