--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="/img/icon.png" />
 
     <title>Мое резюме</title>
-
+	  
     <link rel="stylesheet" id="main-css" href="/css/style.css" type="text/css" media="all" />
     <link rel="stylesheet" id="font-awesome-css"  href="/css/font-awesome.min.css"  type="text/css" media="all" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+	  
   </head>
   <body>
     <div class="first-area">
