--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           <h2 class="title">Мои увлечения</h2>
           <div class="textwidget custom-html-widget">
             <p>
-				Увлекаюсь созданием тем для <u>CMS Wordpress</u> с нуля: 
-				создание макета сайта в <u>Adobe Photoshop</u>, верстка на <u>HTML/CSS</u> 
-				и написание функционала на <u>PHP</u>. В университете изучала <u>C++</u>. 
+				Увлекаюсь созданием тем для <strong>CMS Wordpress</strong> с нуля: 
+				создание макета сайта в <strong>Adobe Photoshop</strong>, верстка на <strong>HTML/CSS</strong> 
+				и написание функционала на <strong>PHP</strong>. В университете изучала <strong>C++</strong>. 
 				Фотограф-любитель. Фотографирую в основном людей :) 
-				Люблю монтировать видео в <u>Sony Vegas</u>. 
+				Люблю монтировать видео в <strong>Sony Vegas</strong>. 
 				Читаю книги в жанре фантастика.  
             </p>
           </div>
@@ -80,11 +80,9 @@
           <h2 class="title">Ключевые для курса навыки</h2>
           <div class="textwidget custom-html-widget">
             <ul>
-              <li>
-                <a>Мой уровень английского А2+</a></li>
+              <li>Мой уровень английского А2+</li>
               <li>Владею С++ и PHP, основами JS</li>
-			  <li>Увлекаюсь веб-дизайном</li>
-			  
+		<li>Увлекаюсь веб-дизайном</li>	  
             </ul>
           </div>
 		</div>
