--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="mast-img"></div>      
 
         <div class="site-welcome">
-          <h1> <span><i class="fa fa-quote-left"></i> Обо мне</span></h1>
+          <h1> <span><i class="fa fa-address-card"></i> Обо мне</span></h1>
 		
 		  <div class="clear"></div>
 		  А если полностью, то <strong>Куликова Алина Викторовна</strong>. 
