--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="headlines site-welcome">
           <h1>
-            <span><i class="fa fa-newspaper-o"></i>Почему мне интересен курс Frontend «JS Camping»?</span>
+            <span><i class="fa fa-question-circle"></i>Почему мне интересен курс Frontend «JS Camping»?</span>
           </h1>
           <div class="clear"></div>
           
