--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="mast-img"></div>      
 
         <div class="site-welcome">
-          <h1> <span><i class="fa fa-address-card"></i> Обо мне</span></h1>
+          <h1> <span><i class="fa fa-address-book" aria-hidden="true"></i> Обо мне</span></h1>
 		
 		  <div class="clear"></div>
 		  А если полностью, то <strong>Куликова Алина Викторовна</strong>. 
@@ -39,7 +39,7 @@
 
         <div class="headlines site-welcome">
           <h1>
-            <span><i class="fa fa-question-circle"></i>Почему мне интересен курс Frontend «JS Camping»?</span>
+            <span><i class="fa fa-question-circle" aria-hidden="true"></i>Почему мне интересен курс Frontend «JS Camping»?</span>
           </h1>
           <div class="clear"></div>
           
