--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           <h2 class="title">Ключевые для курса навыки</h2>
           <div class="textwidget custom-html-widget">
             <ul>
-              <li>Мой уровень английского А2+</li>
-              <li>Владею С++ и PHP, основами JS</li>
-		<li>Увлекаюсь веб-дизайном</li>	  
+              <li><i class="fa fa-check-square" aria-hidden="true">Мой уровень английского А2+</i></li>
+              <li><i class="fa fa-check-square" aria-hidden="true">Владею С++ и PHP, основами JS</i></li>
+		<li><i class="fa fa-check-square" aria-hidden="true">Увлекаюсь веб-дизайном</i></li>	  
             </ul>
           </div>
 		</div>
