--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="mast-img"></div>      
 
         <div class="site-welcome">
-          <h1> <span><i class="fa fa-address-book" aria-hidden="true"></i> Обо мне</span></h1>
+          <h1> <span><i class="fa fa-user-o" aria-hidden="true"></i> Обо мне</span></h1>
 		
 		  <div class="clear"></div>
 		  А если полностью, то <strong>Куликова Алина Викторовна</strong>. 
@@ -80,9 +80,9 @@
           <h2 class="title">Ключевые для курса навыки</h2>
           <div class="textwidget custom-html-widget">
             <ul>
-              <li><i class="fa fa-check-square" aria-hidden="true">Мой уровень английского А2+</i></li>
-              <li><i class="fa fa-check-square" aria-hidden="true">Владею С++ и PHP, основами JS</i></li>
-		<li><i class="fa fa-check-square" aria-hidden="true">Увлекаюсь веб-дизайном</i></li>	  
+              <li>Мой уровень английского А2+</li>
+              <li>Владею С++ и PHP, основами JS</li>
+		<li>Увлекаюсь веб-дизайном</li>	  
             </ul>
           </div>
 		</div>
