--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 			<h2 class="title">Контакты</h2>
 			<div class="textwidget custom-html-widget">
 			  <ul>
-				  <li><i class="fa fa-phone" aria-hidden="true"></i><strong>+ 375 (29) 699-15-65</strong></li>
-				  <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:arlinka@tut.by" title="Почта">arlinka@tut.by</a></li>
-				  <li><i class="fa fa-vk" aria-hidden="true"></i><a href="https://vk.com/arlinkaa" title="ВКонтакте">ВКонтакте</a></li>
-				  <li><i class="fa fa-telegram" aria-hidden="true"></i><a href="https://t.me/arlinka" title="Телеграмм">Телеграмм</a></li>
+				  <li><strong><a>+ 375 (29) 699-15-65</a></strong></li>
+				  <li><a href="mailto:arlinka@tut.by" title="Почта">arlinka@tut.by</a></li>
+				  <li><a href="https://vk.com/arlinkaa" title="ВКонтакте">ВКонтакте</a></li>
+				  <li><a href="https://t.me/arlinka" title="Телеграмм">Телеграмм</a></li>
 	  
 				</ul>
 			  
