--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2 class="title">Ключевые для курса навыки</h2>
           <div class="textwidget custom-html-widget">
             <ul>
-              <li>Мой уровень английского А2+</li>
+              <li>Мой уровень английского А2</li>
               <li>Владею С++ и PHP, основами JS</li>
 		<li>Увлекаюсь веб-дизайном</li>	  
             </ul>
