--- a/stp/index.html
+++ b/stp/index.html
@@ -40,7 +40,7 @@
     // В противном случае, помещаем элемент на своё место или сразу после всех его дубликатов
     while (item == array[pos]) { pos++ }
     const swap = array[pos]
-    array[pos] = item // TODO: Write
+    array[pos] = item
     item = swap
 
     // Циклический круговорот продолжается до тех пор, пока на текущей позиции не окажется её элемент
