--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Мое резюме</title>
 	  
     <link rel="stylesheet" id="main-css" href="/css/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" id="font-awesome-css"  href="/css/font-awesome.css"  type="text/css" media="all" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	  
   </head>
